--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
             </div>
         
         <nav class="nav flex flex-wrap gap-x-6 gap-y-2 text-sm font-semibold">
-            <a href="{% url 'menu_cardapio' %}" class="pb-1 border-b-2 border-transparent hover:border-amarelo-principal transition duration-300">Cardapio</a>
+            <a href="{% url 'menu_cardapio' %}" class="pb-1 border-b-2 border-transparent hover:border-amarelo-principal transition duration-300">Cardápio </a>
             <a href="{% url 'carrinho_detalhe' %}" class="pb-1 border-b-2 border-transparent hover:border-amarelo-principal transition duration-300">Carrinho</a>
             <a href="{% url 'finalizar_pedido' %}" class="pb-1 border-b-2 border-transparent hover:border-amarelo-principal transition duration-300">Finalizar Pedido</a>
             
