--- a/templates/cliente/carrinho.html
+++ b/templates/cliente/carrinho.html
@@ -20,6 +20,7 @@
                         <th class="py-3 px-4">Preço</th>
                         <th class="py-3 px-4">Quantidade</th>
                         <th class="py-3 px-4">Total</th>
+                        <th class="py-3 px-4">Ações</th>
                         <th class="py-3 px-4 rounded-tr-xl"></th>
                     </tr>
                 </thead>
