--- a/templates/admin/historico.html
+++ b/templates/admin/historico.html
@@ -3,12 +3,17 @@
 
 {% block content %}
     <div class="mb-10">
+        
         <h2 class="text-3xl md:text-4xl font-bold text-preto-texto mb-2">Histórico de Pedidos</h2>
-        <p class="text-cinza-texto text-base">Use os filtros abaixo para refinar o período desejado.</p>
+            <p class="text-cinza-texto text-base">Use os filtros abaixo para refinar o período desejado.</p>
     </div>
 
+            <a href="{% url 'admin_painel' %}" 
+           class="py-2 px-4 font-bold mb-4 rounded-xl shadow-lg bg-verde-principal text-white hover:bg-green-700 transition duration-300 hover:-translate-y-0.5">
+           ← Voltar
+        </a>
     <form method="get"
-          class="flex flex-wrap items-end gap-6 p-6 border border-gray-200 rounded-xl mb-12 bg-white shadow-lg">
+          class="flex flex-wrap items-end mt-4 gap-6 p-6 border border-gray-200 rounded-xl mb-12 bg-white shadow-lg">
 
         <div class="flex flex-col flex-grow min-w-[180px]">
             <label for="data_inicio" class="mb-2 font-semibold text-sm text-preto-texto">Data Início</label>
