--- a/templates/admin/produto_form.html
+++ b/templates/admin/produto_form.html
@@ -14,7 +14,7 @@
 
     <form method="post"
           class="max-w-2xl mx-auto p-10 rounded-2xl bg-white border border-gray-200 shadow-xl space-y-6"
-          {% if produto %}action="{% url 'produto_editar' produto.id %}"{% endif %}
+          action="{% if produto %}{% url 'produto_editar' produto.id %}{% endif %}"
     >
         {% csrf_token %}
 
